fixed layout issue
fixed overflow issue...it was related to h2 tags overflowing their divs
due to css styling

--- a/app/styles/_global-styles.scss
+++ b/app/styles/_global-styles.scss
@@ -1,3 +1,4 @@
+
 body {
    background: url(../images/portfolio-pic-sound2.jpg) no-repeat center fixed;
    -webkit-background-size: cover;
@@ -16,6 +17,12 @@ h3 {
   font-size: 12pt;
 }
 
+h4 {
+  color: $highlight;
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 20pt;
+}
+
 p {
    color: $highlight;
    font-family: 'Open Sans', sans-serif;
@@ -24,4 +31,121 @@ p {
 li {
   color: $highlight;
   font-family: 'Open Sans', sans-serif;
+}
+
+#main-title {
+   position: relative;
+   top: 425px;
+   float: right;
+ }
+
+#statement {
+  position: fixed;
+  width: 325px;
+  height: auto;
+  top: 100px;
+  right: 50px;
+  color: white;
+  visibility: hidden;
+ }
+
+#skills h2, #projects h2, #bio h2, #contact h2 {
+   margin-left: 30px;
+ }
+
+#skills {
+  position: relative;
+  top:1000px;
+  height:auto;
+  background-color: black;
+}
+
+.skills-list {
+  position: relative;
+  display: inline-block;
+  width: 150px;
+  left: 100px;
+  text-align: right;
+}
+
+.skills-list ul {
+  list-style: none;
+}
+
+.skills-list li {
+  margin: 2px;
+}
+
+.skills-graph {
+    position: relative;
+    display: inline-block;
+    height: 140px;
+    width: 300px;
+    left: 100px;
+}
+
+#html, #css, #javascript, #angular, #photoshop, #illustrator, #blender, #indesign {
+  position: relative;
+  height: 18px;
+  background-color: #FFD93B;
+  margin: 5px;
+  width: 1px;
+  transition-delay: 2s;
+  transition-duration: 2s;
+  transition-property: width;
+}
+
+.skills-graph p {
+  position: relative;
+  text-align: right;
+  color: black;
+}
+
+#html.full {
+  width: 300px;
+}
+#css.full {
+  width: 275px;
+}
+#javascript.full {
+  width: 250px;
+}
+#angular.full {
+  width: 225px;
+}
+
+#photoshop.full {
+  width: 300px;
+}
+#illustrator.full {
+  width: 250px;
+}
+#blender.full {
+  width: 100px;
+}
+#indesign.full {
+  width: 200px;
+}
+
+#projects {
+  position: relative;
+  top:1000px;
+  height: auto;
+  background-color: gray;
+}
+
+#bio {
+  background: url(../images/portfolio-pic.jpg) center center fixed;
+  background-size: cover;
+  position: relative;
+  top: 1000px;
+  height: 60vh;
+  background-color: black;
+}
+
+#contact {
+  position: relative;
+  top: 1000px;
+  height: auto;
+  background-color: gray;
 }
